--- a/webmap/index.html
+++ b/webmap/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="css/leaflet.css">
         <link rel="stylesheet" href="css/qgis2web.css"><link rel="stylesheet" href="css/fontawesome-all.min.css">
         <style>
+.abstractUncollapsed {max-width: 100%;}
         html, body, #map {
             width: 100%;
             height: 100%;
@@ -98,7 +99,7 @@
                 lineJoin: 'miter',
                 weight: 1.0, 
                 fill: true,
-                fillOpacity: 1,
+                fillOpacity: 0.75,
                 fillColor: 'rgba(0,255,0,0.75)',
                 interactive: true,
             }
@@ -113,7 +114,7 @@
                 lineJoin: 'miter',
                 weight: 1.0, 
                 fill: true,
-                fillOpacity: 1,
+                fillOpacity: 0.75,
                 fillColor: 'rgba(0,128,0,0.75)',
                 interactive: true,
             }
@@ -128,7 +129,7 @@
                 lineJoin: 'miter',
                 weight: 1.0, 
                 fill: true,
-                fillOpacity: 1,
+                fillOpacity: 0.75,
                 fillColor: 'rgba(255,255,0,0.75)',
                 interactive: true,
             }
@@ -143,7 +144,7 @@
                 lineJoin: 'miter',
                 weight: 1.0, 
                 fill: true,
-                fillOpacity: 1,
+                fillOpacity: 0.75,
                 fillColor: 'rgba(255,165,0,0.75)',
                 interactive: true,
             }
@@ -158,7 +159,7 @@
                 lineJoin: 'miter',
                 weight: 1.0, 
                 fill: true,
-                fillOpacity: 1,
+                fillOpacity: 0.75,
                 fillColor: 'rgba(255,100,0,0.75)',
                 interactive: true,
             }
@@ -173,7 +174,7 @@
                 lineJoin: 'miter',
                 weight: 1.0, 
                 fill: true,
-                fillOpacity: 1,
+                fillOpacity: 0.75,
                 fillColor: 'rgba(255,0,0,0.75)',
                 interactive: true,
             }
@@ -453,7 +454,7 @@
                 abstract.show = function () {
                     this._div.classList.remove("abstract");
                     this._div.classList.add("abstractUncollapsed");
-                    this._div.innerHTML = 'abstract';
+                    this._div.innerHTML = '<b>Coconut Rhinoceros Beetle Damage</b><br><b>Guam Roadside Imagery Survey</b><br><b>August 2021</b><br><br><table><tr><td>Start date:</td><td  style="text-align:right">2021-08-23</td></tr><tr><td>End date:</td><td  style="text-align:right">2021-09-03</td></tr><tr><td>Images examined:</td><td style="text-align:right">35,868</td></tr><tr></tr><tr><td><b>V-cuts detected:</b></td><td style="text-align:right"><b>2,965</b></td></tr><tr></tr><tr><td><b>Coconut palm images:</b></td><td style="text-align:right"><b>12,873</b></td></tr><tr><td>0 No damage:</td><td style="text-align:right">10,131</td></tr><tr><td>1 Light damage:</td><td style="text-align:right">1,568</td></tr><tr><td>2 Medium damage:</td><td style="text-align:right">683</td></tr><tr><td>3 High damage:</td><td style="text-align:right">422</td></tr><tr><td>4 Moribund or dead:</td><td style="text-align:right">69</td></tr><tr><td><b>Mean damage index:</td><td style="text-align:right"><b>0.348</b></td></tr><tr><td><b>Trees damaged:</td><td style="text-align:right"><b>21.3%</b></td></tr></table><img src="pie.svg" width="350"><br>Repository:<br><a href="https://github.com/aubreymoore/Guam-CRB-Damage-Map-2021-08">https://github.com/aubreymoore/Guam-CRB-Damage-Map-2021-08</a>';
             };
             abstract.addTo(map);
         var baseMaps = {};
