--- a/webmap/index.html
+++ b/webmap/index.html
@@ -9,7 +9,6 @@
         <link rel="stylesheet" href="css/leaflet.css">
         <link rel="stylesheet" href="css/qgis2web.css"><link rel="stylesheet" href="css/fontawesome-all.min.css">
         <style>
-.abstractUncollapsed {max-width: 100%;}
         html, body, #map {
             width: 100%;
             height: 100%;
@@ -32,9 +31,6 @@
         <script src="js/labelgun.min.js"></script>
         <script src="js/labels.js"></script>
         <script src="data/mean_damage_index_1.js"></script>
-        <script src="data/images_2.js"></script>
-        <script src="data/vshapedcuts_3.js"></script>
-        <script src="data/coconutpalms_4.js"></script>
         <script>
         var highlightLayer;
         function highlightFeature(e) {
@@ -99,7 +95,7 @@
                 lineJoin: 'miter',
                 weight: 1.0, 
                 fill: true,
-                fillOpacity: 0.75,
+                fillOpacity: 1,
                 fillColor: 'rgba(0,255,0,0.75)',
                 interactive: true,
             }
@@ -114,7 +110,7 @@
                 lineJoin: 'miter',
                 weight: 1.0, 
                 fill: true,
-                fillOpacity: 0.75,
+                fillOpacity: 1,
                 fillColor: 'rgba(0,128,0,0.75)',
                 interactive: true,
             }
@@ -129,7 +125,7 @@
                 lineJoin: 'miter',
                 weight: 1.0, 
                 fill: true,
-                fillOpacity: 0.75,
+                fillOpacity: 1,
                 fillColor: 'rgba(255,255,0,0.75)',
                 interactive: true,
             }
@@ -144,7 +140,7 @@
                 lineJoin: 'miter',
                 weight: 1.0, 
                 fill: true,
-                fillOpacity: 0.75,
+                fillOpacity: 1,
                 fillColor: 'rgba(255,165,0,0.75)',
                 interactive: true,
             }
@@ -159,7 +155,7 @@
                 lineJoin: 'miter',
                 weight: 1.0, 
                 fill: true,
-                fillOpacity: 0.75,
+                fillOpacity: 1,
                 fillColor: 'rgba(255,100,0,0.75)',
                 interactive: true,
             }
@@ -174,7 +170,7 @@
                 lineJoin: 'miter',
                 weight: 1.0, 
                 fill: true,
-                fillOpacity: 0.75,
+                fillOpacity: 1,
                 fillColor: 'rgba(255,0,0,0.75)',
                 interactive: true,
             }
@@ -194,254 +190,6 @@
         });
         bounds_group.addLayer(layer_mean_damage_index_1);
         map.addLayer(layer_mean_damage_index_1);
-        function pop_images_2(feature, layer) {
-            layer.on({
-                mouseout: function(e) {
-                    if (typeof layer.closePopup == 'function') {
-                        layer.closePopup();
-                    } else {
-                        layer.eachLayer(function(feature){
-                            feature.closePopup()
-                        });
-                    }
-                },
-                mouseover: highlightFeature,
-            });
-            var popupContent = '<table>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['id'] !== null ? autolinker.link(feature.properties['id'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['video_id'] !== null ? autolinker.link(feature.properties['video_id'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['frame_number'] !== null ? autolinker.link(feature.properties['frame_number'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['time'] !== null ? autolinker.link(feature.properties['time'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                </table>';
-            layer.bindPopup(popupContent, {maxHeight: 400});
-        }
-
-        function style_images_2_0() {
-            return {
-                pane: 'pane_images_2',
-                radius: 0.2,
-                opacity: 1,
-                color: 'rgba(35,35,35,1.0)',
-                dashArray: '',
-                lineCap: 'butt',
-                lineJoin: 'miter',
-                weight: 1,
-                fill: true,
-                fillOpacity: 1,
-                fillColor: 'rgba(0,0,0,1.0)',
-                interactive: true,
-            }
-        }
-        map.createPane('pane_images_2');
-        map.getPane('pane_images_2').style.zIndex = 402;
-        map.getPane('pane_images_2').style['mix-blend-mode'] = 'normal';
-        var layer_images_2 = new L.geoJson(json_images_2, {
-            attribution: '',
-            interactive: true,
-            dataVar: 'json_images_2',
-            layerName: 'layer_images_2',
-            pane: 'pane_images_2',
-            onEachFeature: pop_images_2,
-            pointToLayer: function (feature, latlng) {
-                var context = {
-                    feature: feature,
-                    variables: {}
-                };
-                return L.circleMarker(latlng, style_images_2_0(feature));
-            },
-        });
-        bounds_group.addLayer(layer_images_2);
-        function pop_vshapedcuts_3(feature, layer) {
-            layer.on({
-                mouseout: function(e) {
-                    if (typeof layer.closePopup == 'function') {
-                        layer.closePopup();
-                    } else {
-                        layer.eachLayer(function(feature){
-                            feature.closePopup()
-                        });
-                    }
-                },
-                mouseover: highlightFeature,
-            });
-            var popupContent = '<table>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['ROWID'] !== null ? autolinker.link(feature.properties['ROWID'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                </table>';
-            layer.bindPopup(popupContent, {maxHeight: 400});
-        }
-
-        function style_vshapedcuts_3_0() {
-            return {
-                pane: 'pane_vshapedcuts_3',
-                radius: 4.0,
-                opacity: 1,
-                color: 'rgba(35,35,35,1.0)',
-                dashArray: '',
-                lineCap: 'butt',
-                lineJoin: 'miter',
-                weight: 1,
-                fill: true,
-                fillOpacity: 1,
-                fillColor: 'rgba(255,0,255,1.0)',
-                interactive: true,
-            }
-        }
-        map.createPane('pane_vshapedcuts_3');
-        map.getPane('pane_vshapedcuts_3').style.zIndex = 403;
-        map.getPane('pane_vshapedcuts_3').style['mix-blend-mode'] = 'normal';
-        var layer_vshapedcuts_3 = new L.geoJson(json_vshapedcuts_3, {
-            attribution: '',
-            interactive: true,
-            dataVar: 'json_vshapedcuts_3',
-            layerName: 'layer_vshapedcuts_3',
-            pane: 'pane_vshapedcuts_3',
-            onEachFeature: pop_vshapedcuts_3,
-            pointToLayer: function (feature, latlng) {
-                var context = {
-                    feature: feature,
-                    variables: {}
-                };
-                return L.circleMarker(latlng, style_vshapedcuts_3_0(feature));
-            },
-        });
-        bounds_group.addLayer(layer_vshapedcuts_3);
-        function pop_coconutpalms_4(feature, layer) {
-            layer.on({
-                mouseout: function(e) {
-                    if (typeof layer.closePopup == 'function') {
-                        layer.closePopup();
-                    } else {
-                        layer.eachLayer(function(feature){
-                            feature.closePopup()
-                        });
-                    }
-                },
-                mouseover: highlightFeature,
-            });
-            var popupContent = '<table>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['id'] !== null ? autolinker.link(feature.properties['id'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['damage_index'] !== null ? autolinker.link(feature.properties['damage_index'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                </table>';
-            layer.bindPopup(popupContent, {maxHeight: 400});
-        }
-
-        function style_coconutpalms_4_0(feature) {
-            switch(String(feature.properties['damage_index'])) {
-                case '0':
-                    return {
-                pane: 'pane_coconutpalms_4',
-                radius: 4.0,
-                opacity: 1,
-                color: 'rgba(35,35,35,1.0)',
-                dashArray: '',
-                lineCap: 'butt',
-                lineJoin: 'miter',
-                weight: 1,
-                fill: true,
-                fillOpacity: 1,
-                fillColor: 'rgba(0,255,0,1.0)',
-                interactive: true,
-            }
-                    break;
-                case '1':
-                    return {
-                pane: 'pane_coconutpalms_4',
-                radius: 4.0,
-                opacity: 1,
-                color: 'rgba(35,35,35,1.0)',
-                dashArray: '',
-                lineCap: 'butt',
-                lineJoin: 'miter',
-                weight: 1,
-                fill: true,
-                fillOpacity: 1,
-                fillColor: 'rgba(255,255,0,1.0)',
-                interactive: true,
-            }
-                    break;
-                case '2':
-                    return {
-                pane: 'pane_coconutpalms_4',
-                radius: 4.0,
-                opacity: 1,
-                color: 'rgba(35,35,35,1.0)',
-                dashArray: '',
-                lineCap: 'butt',
-                lineJoin: 'miter',
-                weight: 1,
-                fill: true,
-                fillOpacity: 1,
-                fillColor: 'rgba(255,165,0,1.0)',
-                interactive: true,
-            }
-                    break;
-                case '3':
-                    return {
-                pane: 'pane_coconutpalms_4',
-                radius: 4.0,
-                opacity: 1,
-                color: 'rgba(35,35,35,1.0)',
-                dashArray: '',
-                lineCap: 'butt',
-                lineJoin: 'miter',
-                weight: 1,
-                fill: true,
-                fillOpacity: 1,
-                fillColor: 'rgba(255,100,0,1.0)',
-                interactive: true,
-            }
-                    break;
-                case '4':
-                    return {
-                pane: 'pane_coconutpalms_4',
-                radius: 4.0,
-                opacity: 1,
-                color: 'rgba(35,35,35,1.0)',
-                dashArray: '',
-                lineCap: 'butt',
-                lineJoin: 'miter',
-                weight: 1,
-                fill: true,
-                fillOpacity: 1,
-                fillColor: 'rgba(255,0,0,1.0)',
-                interactive: true,
-            }
-                    break;
-            }
-        }
-        map.createPane('pane_coconutpalms_4');
-        map.getPane('pane_coconutpalms_4').style.zIndex = 404;
-        map.getPane('pane_coconutpalms_4').style['mix-blend-mode'] = 'normal';
-        var layer_coconutpalms_4 = new L.geoJson(json_coconutpalms_4, {
-            attribution: '',
-            interactive: true,
-            dataVar: 'json_coconutpalms_4',
-            layerName: 'layer_coconutpalms_4',
-            pane: 'pane_coconutpalms_4',
-            onEachFeature: pop_coconutpalms_4,
-            pointToLayer: function (feature, latlng) {
-                var context = {
-                    feature: feature,
-                    variables: {}
-                };
-                return L.circleMarker(latlng, style_coconutpalms_4_0(feature));
-            },
-        });
-        bounds_group.addLayer(layer_coconutpalms_4);
             var abstract = new L.Control({'position':'topleft'});
             abstract.onAdd = function (map) {
                 this._div = L.DomUtil.create('div',
@@ -454,11 +202,11 @@
                 abstract.show = function () {
                     this._div.classList.remove("abstract");
                     this._div.classList.add("abstractUncollapsed");
-                    this._div.innerHTML = '<b>Coconut Rhinoceros Beetle Damage</b><br><b>Guam Roadside Imagery Survey</b><br><b>August 2021</b><br><br><table><tr><td>Start date:</td><td  style="text-align:right">2021-08-23</td></tr><tr><td>End date:</td><td  style="text-align:right">2021-09-03</td></tr><tr><td>Images examined:</td><td style="text-align:right">35,868</td></tr><tr></tr><tr><td><b>V-cuts detected:</b></td><td style="text-align:right"><b>2,965</b></td></tr><tr></tr><tr><td><b>Coconut palm images:</b></td><td style="text-align:right"><b>12,873</b></td></tr><tr><td>0 No damage:</td><td style="text-align:right">10,131</td></tr><tr><td>1 Light damage:</td><td style="text-align:right">1,568</td></tr><tr><td>2 Medium damage:</td><td style="text-align:right">683</td></tr><tr><td>3 High damage:</td><td style="text-align:right">422</td></tr><tr><td>4 Moribund or dead:</td><td style="text-align:right">69</td></tr><tr><td><b>Mean damage index:</td><td style="text-align:right"><b>0.348</b></td></tr><tr><td><b>Trees damaged:</td><td style="text-align:right"><b>21.3%</b></td></tr></table><img src="pie.svg" width="350"><br>Repository:<br><a href="https://github.com/aubreymoore/Guam-CRB-Damage-Map-2021-08">https://github.com/aubreymoore/Guam-CRB-Damage-Map-2021-08</a>';
+                    this._div.innerHTML = 'abstract';
             };
             abstract.addTo(map);
         var baseMaps = {};
-        L.control.layers(baseMaps,{'coconut palms<br /><table><tr><td style="text-align: center;"><img src="legend/coconutpalms_4_0Nodamage0.png" /></td><td>0 No damage</td></tr><tr><td style="text-align: center;"><img src="legend/coconutpalms_4_1lightdamage1.png" /></td><td>1 light damage</td></tr><tr><td style="text-align: center;"><img src="legend/coconutpalms_4_2mediumdamage2.png" /></td><td>2 medium damage</td></tr><tr><td style="text-align: center;"><img src="legend/coconutpalms_4_3highdamage3.png" /></td><td>3 high damage</td></tr><tr><td style="text-align: center;"><img src="legend/coconutpalms_4_4moribunddead4.png" /></td><td>4 moribund/dead</td></tr></table>': layer_coconutpalms_4,'<img src="legend/vshapedcuts_3.png" /> v-shaped cuts': layer_vshapedcuts_3,'<img src="legend/images_2.png" /> images': layer_images_2,'mean_damage_index<br /><table><tr><td style="text-align: center;"><img src="legend/mean_damage_index_1_00nodamage0.png" /></td><td>0.0 no damage</td></tr><tr><td style="text-align: center;"><img src="legend/mean_damage_index_1_0005verylightdamage1.png" /></td><td>>0.0 - 0.5 very light damage</td></tr><tr><td style="text-align: center;"><img src="legend/mean_damage_index_1_0515lightdamage2.png" /></td><td>>0.5 - 1.5 light damage</td></tr><tr><td style="text-align: center;"><img src="legend/mean_damage_index_1_1525mediumdamage3.png" /></td><td>>1.5 - 2.5 medium damage</td></tr><tr><td style="text-align: center;"><img src="legend/mean_damage_index_1_2535highdamage4.png" /></td><td>>2.5 - 3.5 high damage</td></tr><tr><td style="text-align: center;"><img src="legend/mean_damage_index_1_3540moribunddead5.png" /></td><td>>3.5 - 4.0 moribund/dead</td></tr></table>': layer_mean_damage_index_1,"Guam": layer_Guam_0,},{collapsed:false}).addTo(map);
+        L.control.layers(baseMaps,{'mean_damage_index<br /><table><tr><td style="text-align: center;"><img src="legend/mean_damage_index_1_00nodamage0.png" /></td><td>0.0 no damage</td></tr><tr><td style="text-align: center;"><img src="legend/mean_damage_index_1_0005verylightdamage1.png" /></td><td>>0.0 - 0.5 very light damage</td></tr><tr><td style="text-align: center;"><img src="legend/mean_damage_index_1_0515lightdamage2.png" /></td><td>>0.5 - 1.5 light damage</td></tr><tr><td style="text-align: center;"><img src="legend/mean_damage_index_1_1525mediumdamage3.png" /></td><td>>1.5 - 2.5 medium damage</td></tr><tr><td style="text-align: center;"><img src="legend/mean_damage_index_1_2535highdamage4.png" /></td><td>>2.5 - 3.5 high damage</td></tr><tr><td style="text-align: center;"><img src="legend/mean_damage_index_1_3540moribunddead5.png" /></td><td>>3.5 - 4.0 moribund/dead</td></tr></table>': layer_mean_damage_index_1,"Guam": layer_Guam_0,},{collapsed:false}).addTo(map);
         setBounds();
         </script>
     </body>
